# cantarell-fonts

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTORS  COPYING  Dockerfile  Makefile.am  NEWS  README  README.md  autogen.sh  build.ninja  cantarell-fonts.doap  configure.ac  meson.build  meson_options.txt  noxfile.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  scan-ds.py
otf/: Makefile.am  hhints.txt
prebuilt/: meson.build
src/: Cantarell-Bold-OTF.sfd  Cantarell-Bold-TTF.sfd  Cantarell-Bold-TTF.sfd~  Cantarell-Bold.sfd  Cantarell-Bold.sfd~  Cantarell-BoldOblique.sfd  Cantarell-Oblique.sfd  Cantarell-Regular-Combined.sfd  Cantarell-Regular-OTF.sfd  Cantarell-Regular-PSHints.sfd  Cantarell-Regular-Spiro.sfd  Cantarell-Regular-TTF.sfd  Cantarell-Regular-TTF.sfd~  Cantarell-Regular.sfd  Cantarell-Regular.sfd.LOCAL.72886.sfd  Cantarell-Regular.sfd.REMOTE.72886.sfd  Cantarell-Regular.sfd~  Cantarell.designspace  Cantarell.glyphs  Cantarell.stylespace  Cantarell_autospace.py  Makefile.am  family.fea  gdef.fea  glyph-construction.txt  meson.build
src/Cantarell-Bold.sfdir/: _A-cy.glyph  _A.glyph  _A_E.glyph  _A_Eacute.glyph  _Aacute.glyph  _Abreve-cy.glyph  _Abreve.glyph  _Abreveacute.glyph  _Abrevedotbelow.glyph  _Abrevegrave.glyph  _Abrevehookabove.glyph  _Abrevetilde.glyph  _Acaron.glyph  _Acircumflex.glyph  _Acircumflexacute.glyph  _Acircumflexdotbelow.glyph  _Acircumflexgrave.glyph  _Acircumflexhookabove.glyph  _Acircumflextilde.glyph  _Adieresis-cy.glyph  _Adieresis.glyph  _Adotbelow.glyph  _Agrave.glyph  _Ahookabove.glyph  _Aie-cy.glyph  _Amacron.glyph  _Aogonek.glyph  _Aring.glyph  _Aringacute.glyph  _Atilde.glyph  _B.glyph  _Bdotaccent.glyph  _Be-cy.glyph  _C.glyph  _Cacute.glyph  _Ccaron.glyph  _Ccedilla.glyph  _Ccircumflex.glyph  _Cdotaccent.glyph  _Che-cy.glyph  (+1354 more)
src/Cantarell-Bold.ufo/: features.fea  fontinfo.plist  groups.plist  layercontents.plist  lib.plist
src/Cantarell-Bold.ufo/glyphs/: A_-cy.glif  A_.glif  A_E_.glif  A_E_acute.glif  A_acute.glif  A_breve-cy.glif  A_breve.glif  A_breveacute.glif  A_brevedotbelow.glif  A_brevegrave.glif  A_brevehookabove.glif  A_brevetilde.glif  A_caron.glif  A_grave.glif  (+1427 more)
src/Cantarell-Bold.ufo/glyphs.D_ec 4 17, 16_22/: b.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.D_ec 4 17, 16_23/: contents.plist  layerinfo.plist  p.glif
src/Cantarell-Bold.ufo/glyphs.D_ec 4 17, 16_24/: d.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.D_ec 4 17, 16_27/: contents.plist  layerinfo.plist  q.glif
src/Cantarell-Bold.ufo/glyphs.D_ec 4 17, 16_29/: g.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.D_ec 5 17, 20_29/: Q_.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.D_ec 5 17, 23_16/: a.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.D_ec 5 17, 23_39/: contents.plist  g.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.F_inal B_ent/: be-cy.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.J_an 16 18, 23_07/: a.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.J_un 8 19, 20_46/: five.tf.glif  layerinfo.plist  nine.tf.glif  seven.tf.glif  three.tf.glif  two.tf.glif
src/Cantarell-Bold.ufo/glyphs.J_un 8 19, 20_55/: layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.M_ay 11 19, 19_56/: layerinfo.plist  six.glif
src/Cantarell-Bold.ufo/glyphs.M_ay 11 19, 19_57/: layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.M_ay 11 19, 20_04/: layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.M_ay 11 19, 20_09/: contents.plist  layerinfo.plist  six.glif
src/Cantarell-Bold.ufo/glyphs.M_ay 11 19, 20_10/: four.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.M_ay 11 19, 20_11/: layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.M_ay 11 19, 20_12/: layerinfo.plist  zero.glif
src/Cantarell-Bold.ufo/glyphs.M_ay 5 19, 13_08/: contents.plist  eight.glif  five.glif  layerinfo.plist  nine.glif  one.glif  seven.glif  three.glif  two.glif
src/Cantarell-Bold.ufo/glyphs.O_utline/: S_hcha-cy.glif  contents.plist  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.S_lanted/: el-cy.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.S_teeper/: be-cy.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.T_emplate/: E_ng.glif  contents.plist  eng.glif  florin.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.W_avy/: be-cy.glif  layerinfo.plist
src/Cantarell-Bold.ufo/glyphs.public.background/: C_.glif  D_elta.glif  H_.glif  O_mega.glif  P_hi.glif  P_si.glif  S_ha-cy.glif  T_heta.glif  T_se-cy.glif  X_i.glif  acutecomb_dotaccentcomb.glif  alpha.glif  beta.glif  caroncomb_dotaccentcomb.glif  chi.glif  contents.plist  delta.glif  dieresiscomb_acutecomb.glif  dieresiscomb_caroncomb.glif  dieresiscomb_gravecomb.glif  dieresiscomb_macroncomb.glif  dieresistonos.glif  epsilon.glif  gamma.glif  kaiS_ymbol.glif  kappa.glif  macroncomb_acutecomb.glif  macroncomb_gravecomb.glif  mu.glif  omega.glif  omicron.glif  phi.glif  pi.glif  psi.glif  psili.glif  psilioxia.glif  psilivaria.glif  rho.glif  sigma.glif  sigmafinal.glif  (+11 more)
src/Cantarell-Light.ufo/: features.fea  fontinfo.plist  groups.plist  layercontents.plist  lib.plist
src/Cantarell-Regular.sfdir/: _A-cy.glyph  _A.glyph  _A_E.glyph  _A_Eacute.glyph  _Aacute.glyph  _Abreve-cy.glyph  _Abreve.glyph  _Abreveacute.glyph  _Abrevedotbelow.glyph  _Abrevegrave.glyph  _Abrevehookabove.glyph  _Abrevetilde.glyph  _Acaron.glyph  _Acircumflex.glyph  _Acircumflexacute.glyph  _Acircumflexdotbelow.glyph  _Acircumflexgrave.glyph  _Acircumflexhookabove.glyph  _Acircumflextilde.glyph  _Adieresis-cy.glyph  _Adieresis.glyph  _Adotbelow.glyph  _Agrave.glyph  _Ahookabove.glyph  _Aie-cy.glyph  _Amacron.glyph  _Aogonek.glyph  _Aring.glyph  _Aringacute.glyph  _Atilde.glyph  _B.glyph  _Bdotaccent.glyph  _Be-cy.glyph  _C.glyph  _Cacute.glyph  _Ccaron.glyph  _Ccedilla.glyph  _Ccircumflex.glyph  _Cdotaccent.glyph  _Che-cy.glyph  (+1354 more)
src/Cantarell-Regular.ufo/: features.fea  fontinfo.plist  layercontents.plist  lib.plist
src/CantarellLegacy-Bold.ufo/: features.fea  fontinfo.plist  lib.plist
src/CantarellLegacy-Regular.ufo/: features.fea  fontinfo.plist
(+4802 files in other folders)
