[project]
name = "cantarell-fonts"
version = "0.311"
description = "The Cantarell typeface family is a contemporary Humanist sans serif."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "afdko>=4.0.3",
    "fontTools[ufo,lxml,unicode]>=4.61.1",
    "meson",
    "ninja",
    "skia-pathops>=0.9.1",
    "ufo2ft>=3.7.0",
    "ufoLib2>=0.18.1",
    "uharfbuzz>=0.53.2",
]

[dependency-groups]
dev = [
    "glyphconstruction",
    "glyphsLib",
    "nox",
    "nox_uv",
]

[tool.uv.sources]
glyphconstruction = { git = "https://github.com/typemytype/GlyphConstruction.git" }
