if get_option('buildstatics') == true
    install_data('Cantarell-Thin.otf', install_dir : fontsdir)
    install_data('Cantarell-Light.otf', install_dir : fontsdir)
    install_data('Cantarell-Regular.otf', install_dir : fontsdir)
    install_data('Cantarell-Bold.otf', install_dir : fontsdir)
    install_data('Cantarell-ExtraBold.otf', install_dir : fontsdir)
endif

if get_option('buildvf') == true
    install_data('Cantarell-VF.otf', install_dir : fontsdir)
endif
